# Crafter

./: .env.example  .gitignore  LICENSE  README.md  convert.py  demo.py  inference.py  pyproject.toml  requirements.txt
configs/: default.yaml
craftbench/: LICENSE  README.md  manifest.json
craftbench/evaluation/: __init__.py  api.py  images.py  judge.py  requirements.txt  run_eval.py
craftbench/samples/: craftbench-0001.json  craftbench-0004.json  craftbench-0026.json
crafter/: cli.py
crafter/editor/: __init__.py  _env.py  cli.py  composition.py  config.py  extraction.py  pipeline.py  processing.py
crafter/editor/approach/: af_supplemental_detect.py  agent_prompt_writer.py  classify_vector_codeable.py  extract_icons.py  hallucination_guard.py  icon_taxonomy.py  iter_svg_fix.py  post_classify_rules.py  prompt_selector.py  stage_a_harness.py  style_analyzer.py  test_text_referring_grounding.py
crafter/editor/caption_sam3_referring/: build_referring_pairs.py
crafter/editor/raster_to_svg/: __init__.py  config.py  model_router.py  schema.py  skill.md
crafter/generation/: __init__.py  cli.py
crafter/generation/core/: config.py
crafter/generation/craft/: __init__.py  agent_judge.py  agent_registry.py  critic.py  figure_spec.py  image_generator.py  paper_reader.py  prompt_refiner.py  reference_search.py  role_planner.py  session.py  sketch_analyzer.py  (+7 more)
crafter/shared/: __init__.py  config.py  judge.py  model_router.py  sam3_client.py
examples/: sample_inpaint_paper.txt  sample_instruction_inpaint.txt  sample_instruction_t2i.txt  sample_paper.txt
(+44 files in other folders)
